@@ -1,3 +1,6 @@
+2011-04-04 Kazuhiko
+* configure searchable text property ids and method ids for Bug.
+
 2010-10-19 Kazuhiko
 * When checking duplicated selection names, we should use get_recursive_orig_value('selection_name') instead of getRecursiveTemplateField().get_value('selection_name'), because delegation for selection_name can end at any intermediate proxy field. And skip an empty selection name that is now valid for a listbox where we don't want to store a selection.
 
